apps/whoami/cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-cloudflared
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: whoami.btrcloud.com
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: Prefix
