apps/whoami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-https
spec:
  hostnames:
  - whoami.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: shared-https
  rules:
  - backendRefs:
    - name: whoami
      port: 80
