apps/whoami/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
spec:
  hostnames:
  - whoami.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
  rules:
  - backendRefs:
    - name: whoami
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
